<resources>
    <string name="app_name">FirebaseExample</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email_field">Email</string>
    <string name="password_field">Password</string>
    <string name="go_to_register">Or register</string>
    <string name="sign_in">Sign in</string>
    <string name="register_field">Register</string>
    <string name="go_to_login">Or login</string>
    <string name="sign_up">Sign up</string>
    <string name="log_out">Log out</string>
</resources>